--- a/package.json
+++ b/package.json
@@ -1,7 +1,21 @@
 {
-  "name": "express",
-  "version": "0.0.0",
-  "private": true,
+  "name": "express-api",
+  "version": "1.0.0",
+  "description": "Simple Application to serve RESTful API",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pdw-git/express-api.git"
+  },
+  "author": "Peter Whitehead",
+  "license": "Apache 2.0",
+  "bugs": {
+    "url": "https://github.com/pdw-git/express-api/issues"
+  },
+  "homepage": "https://github.com/pdw-git/express-api#readme",
   "scripts": {
     "start": "node ./bin/www --debug"
   },
