--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "start": "node ./bin/www --debug"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.9",
+    "express": "^4.16.0",
+    "http-errors": "^1.6.2",
+    "pug": "^2.0.4",
     "mocha": "^5.2.0",
-    "morgan": "~1.9.0",
+    "morgan": "^1.9.0",
     "npm": "^6.14.2",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
