--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/pdw-git/express-api#readme",
   "scripts": {
-    "start": "node ./bin/www --debug"
+    "start": "node ./bin/www --debug",
+    "test" : "mocha test/testAPI/apiTests.js"
   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
