Added port as a configurable entity. This will be used later to dynamically set the port for this application. Also removed unused configuration information in this file.

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -1,9 +1,8 @@
 {
   "inProduction": false,
   "minLogLevel": "debug",
-  "apiServerAddress": "192.168.148.134:3000",
-  "appServerAddress": "192.168.148.134:3000",
   "apiRoute": "/api",
+  "port": 3000,
   "status": {
     "good": 200,
     "notFound": 404,
