Allow the application port to specified as an environment variable. If the environment variable does not exist then it defaults to defaultPort that is defined in the config application file. Updated the dockerfile to define and PORT environment variable and use that ENV in the EXPOSE layer.

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -2,7 +2,7 @@
   "inProduction": false,
   "minLogLevel": "debug",
   "apiRoute": "/api",
-  "port": 3000,
+  "defaultPort": 3000,
   "status": {
     "good": 200,
     "notFound": 404,
