Fixed tests so that they will pick up the PORT environment variable if it has been set.
Added GET /api/version to return a version number for the current API.

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -2,7 +2,9 @@
   "inProduction": false,
   "minLogLevel": "debug",
   "apiRoute": "/api",
+  "apiVersion": "1.0.0",
   "defaultPort": 3000,
+  "ip": "localhost",
   "status": {
     "good": 200,
     "notFound": 404,
