--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
   "homepage": "https://github.com/pdw-git/express-api#readme",
   "scripts": {
     "start": "node ./bin/www --debug",
-    "test" : "mocha test/testAPI/apiTests.js"
+    "test": "mocha test/testAPI/apiTests.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.3",
-    "debug": "^2.6.9",
-    "express": "^4.17.1",
-    "http-errors": "^1.6.2",
-    "pug": "^2.0.4",
-    "mocha": "^5.2.0",
-    "morgan": "^1.9.0",
-    "npm": "^6.14.2",
-    "request": "^2.88.0",
-    "serve-favicon": "^2.5.0",
-    "winston": "^3.1.0"
+    "cookie-parser": ">=1.4.5",
+    "debug": ">=2.6.9",
+    "dotenv": ">=8.2.0",
+    "express": ">=4.17.1",
+    "http-errors": ">=1.7.3",
+    "mocha": ">=7.1.1",
+    "morgan": ">=1.10.0",
+    "npm": ">=6.14.3",
+    "pug": ">=2.0.4",
+    "request": ">=2.88.0",
+    "serve-favicon": ">=2.5.0",
+    "winston": ">=3.1.0"
   }
 }
