--- a/app_config/config.json
+++ b/app_config/config.json
@@ -1,6 +1,6 @@
 {
   "inProduction": false,
-  "minLogLevel": "debug",
+  "defaultLogLevel": "debug",
   "apiRoute": "/api",
   "apiVersion": "1.0.0",
   "defaultPort": 3000,
