define the index, api and user routes in the config.json file
Define the allowable values for NODE_ENV in the config.json file. "development", "production"

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -1,7 +1,11 @@
 {
   "inProduction": false,
   "defaultLogLevel": "debug",
+  "production": "production",
+  "development":  "development",
+  "indexRoute": "/",
   "apiRoute": "/api",
+  "userRoute": "/users",
   "apiVersion": "1.0.0",
   "defaultPort": 3000,
   "ip": "localhost",
