Added the ability to create an https server. Details of the configuration are stored in config.json. Then environment variable HTTPS can be used to toggle between http and https on application start. Self Signed certificates and keys are being included in the GIT repository.

--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,8 @@ node_modules
 # Secrets as environment variables
 secrets.sh
 
+# certs and keys
+#*.pem
+
 # Local dev bundle
 local-dev/bundle.js
