Determine the root directory in app.js and save it in the config.json object. Added a test json description to the config.json object and use this data along with the root directory to determine where files should be taken from to enable Mocha testing in app_api/controllers/api.js.

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -3,12 +3,16 @@
   "defaultLogLevel": "debug",
   "production": "production",
   "development":  "development",
+  "home" : null,
   "indexRoute": "/",
   "apiRoute": "/api",
   "userRoute": "/users",
   "apiVersion": "1.0.0",
   "defaultPort": 3443,
   "ip": "localhost",
+  "tests": {
+    "api": "/test/testAPI/apiTests.js"
+  },
   "encryption": {
     "enabled": true,
     "certProvider": "SELF SIGNED",
