New function: Added a persistence tier in the form of a mongo db. The db was tested by running a mongo docker container.
Docker pull mongo:latest
Docker run -d -p 27017:27017 mongo:latest

Use the database to store configuration data. Default is taken from the config file and augmented with runtime information and environment data.

Created API calls to exercise the database

only GET config has been fully implemented, the remaining ones are just stubs

Tests have been created for the new API calls

Refactored the API files so that they are structured around content and use common functions for responses

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -3,16 +3,26 @@
   "defaultLogLevel": "debug",
   "production": "production",
   "development":  "development",
-  "home" : null,
+  "homeDir" : null,
   "indexRoute": "/",
   "apiRoute": "/api",
   "userRoute": "/users",
   "apiVersion": "1.0.0",
   "defaultPort": 3443,
   "ip": "localhost",
-  "tests": {
-    "api": "/test/testAPI/apiTests.js"
+  "mongo" : {
+    "uri" : "mongodb://localhost:",
+    "port" : 27017,
+    "name": "EXPRESS_API",
+    "configObjectName" : "configuration"
   },
+  "tests": [
+
+    {
+      "area": "testAPI.js",
+      "directory": "/test/"
+    }
+  ],
   "encryption": {
     "enabled": true,
     "certProvider": "SELF SIGNED",
