--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": ">=4.17.1",
     "http-errors": ">=1.7.3",
     "mocha": ">=7.1.1",
+    "mongoose": "^5.9.6",
     "morgan": ">=1.10.0",
     "npm": ">=6.14.3",
     "pug": ">=2.0.4",
