Added test so that similar objects can be validated. This is used to enable comparison of Mongo Objects without inspecting the _id objects which are assigned by Mongo.

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -19,8 +19,8 @@
   "tests": [
 
     {
-      "area": "testAPI.js",
-      "directory": null
+      "area": "testAPI",
+      "directory": "/test/"
     }
   ],
   "encryption": {
