Added an API call to delete the configuration information in the Mongo DB.

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -11,7 +11,7 @@
   "defaultPort": 3443,
   "ip": "localhost",
   "mongo" : {
-    "uri" : "mongodb://localhost:",
+    "uri" : "mongodb://mongo:",
     "port" : 27017,
     "name": "EXPRESS_API",
     "configObjectName" : "configuration"
