--- a/app_config/config.json
+++ b/app_config/config.json
@@ -1,35 +1,13 @@
 {
-  "inProduction": false,
-  "defaultLogLevel": "debug",
-  "production": "production",
-  "development":  "development",
-  "homeDir" : null,
-  "indexRoute": "/",
-  "apiRoute": "/api",
-  "userRoute": "/users",
-  "apiVersion": "1.0.0",
-  "defaultPort": 3443,
-  "ip": "localhost",
   "mongo" : {
-    "uri" : "mongodb://mongo:",
-    "port" : 27017,
-    "name": "EXPRESS_API",
     "configObjectName" : "configuration"
   },
   "tests": [
-
     {
       "area": "testAPI",
       "directory": "/test/"
     }
   ],
-  "encryption": {
-    "enabled": true,
-    "certProvider": "SELF SIGNED",
-    "store": "/keystore/",
-    "key": "key.pem",
-    "cert": "cert.pem"
-  },
   "status": {
     "good": 200,
     "notFound": 404,
@@ -37,5 +15,10 @@
     "created": 201,
     "accepted": 202,
     "success_noContent": 204
+  },
+  "environments": {
+    "npm" : "/environment/npm/.env",
+    "docker" : "/environment/docker/.env",
+    "dockerCompose" : "/environment/docker-compose/.env"
   }
 }
