--- a/environment/docker-compose/.env
+++ b/environment/docker-compose/.env
@@ -2,7 +2,7 @@ PORT=3443
 MONGO_URI=mongodb://mongo:
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
-LOGGING_LEVEL=info
+LOGGING_LEVEL=debug
 NODE_ENV_PRODUCTION=no
 HTTPS=yes
 APP_IP=localhost
