--- a/environment/npm/.env
+++ b/environment/npm/.env
@@ -2,7 +2,7 @@ PORT=3443
 MONGO_URI=mongodb://localhost:
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
-LOGGING_LEVEL=debug
+LOGGING_LEVEL=info
 NODE_ENV_PRODUCTION=no
 HTTPS=yes
 APP_IP=localhost
