Completed the work to ensure the test system works correctly. Issues were being caused becasue I was reading STDOUT and this contained both the test data and output from the applciation. To fix this I have created a simple schell script that when executed pipes the test results into a file. The file is read when the test scripts have been run. Please note there is a lot of error handling that needs to be added to this code.

--- a/app_config/config.json
+++ b/app_config/config.json
@@ -3,9 +3,12 @@
     "configObjectName" : "configuration"
   },
   "tests": [
+
     {
-      "area": "testAPI",
-      "directory": "/test/"
+      "testScript": "/bin/scripts/mochaTest.sh",
+      "area": "/testAPI",
+      "directory": "/test",
+      "results": "/test/testAPI/results/mochaTestResults.json"
     }
   ],
   "status": {
