--- a/environment/docker-compose/.env
+++ b/environment/docker-compose/.env
@@ -1,10 +1,10 @@
-PORT=3443
+PORT=3000
 MONGO_URI=mongodb://mongo:
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
 LOGGING_LEVEL=info
 NODE_ENV_PRODUCTION=no
-HTTPS=yes
+HTTPS=no
 APP_IP=localhost
 INDEX_ROUTE=/
 API_ROUTE=/api
