--- a/environment/npm/.env
+++ b/environment/npm/.env
@@ -1,11 +1,11 @@
-PORT=3443
+PORT=3000
 MONGO_URI=mongodb://localhost:
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
 LOGGING_LEVEL=info
 NODE_ENV_PRODUCTION=no
-HTTPS=yes
 APP_IP=localhost
+HTTPS=no
 INDEX_ROUTE=/
 API_ROUTE=/api
 USER_ROUTE=/users
