Put application into production mode and tidy up the error message for a 500/404 error

--- a/environment/npm/.env
+++ b/environment/npm/.env
@@ -3,7 +3,7 @@ MONGO_URI=mongodb://localhost:
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
 LOGGING_LEVEL=info
-NODE_ENV_PRODUCTION=no
+NODE_ENV_PRODUCTION=yes
 APP_IP=localhost
 HTTPS=no
 INDEX_ROUTE=/
