--- a/environment/docker-compose/.env
+++ b/environment/docker-compose/.env
@@ -3,7 +3,7 @@ MONGO_URI=mongodb://mongo:
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
 LOGGING_LEVEL=info
-NODE_ENV_PRODUCTION=no
+NODE_ENV_PRODUCTION=yes
 HTTPS=no
 APP_IP=localhost
 INDEX_ROUTE=/
