--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": ">=1.4.5",
     "debug": ">=2.6.9",
     "dotenv": ">=8.2.0",
+    "events": "^3.1.0",
     "express": ">=4.17.1",
     "http-errors": ">=1.7.3",
     "mocha": ">=7.1.1",
