--- a/environment/docker-compose/.env
+++ b/environment/docker-compose/.env
@@ -2,7 +2,7 @@ PORT=3000
 MONGO_URI=mongodb://mongo:
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
-LOGGING_LEVEL=info
+LOGGING_LEVEL=error
 NODE_ENV_PRODUCTION=yes
 HTTPS=no
 APP_IP=localhost
