--- a/environment/docker-compose/.env
+++ b/environment/docker-compose/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://mongo:
+MONGO_URI=mongodb://mongo:27017/
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
 LOGGING_LEVEL=info
