--- a/environment/npm/.env
+++ b/environment/npm/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MONGO_URI=mongodb://localhost:
+MONGO_URI=mongodb://localhost:27017/
 MONGO_PORT=27017
 MONGO_DB_NAME=EXPRESS_API
 LOGGING_LEVEL=info
