Added in a delete test. This uses the test function to create a new configuration document and then deletes it. TODO: Add validation of status and body data from the delete response.

--- a/environment/npm/.env
+++ b/environment/npm/.env
@@ -1,15 +1,15 @@
-PORT=3000
-MONGO_URI=mongodb://localhost:27017/
-MONGO_DB_NAME=EXPRESS_API
-LOGGING_LEVEL=info
-NODE_ENV_PRODUCTION=yes
-APP_IP=localhost
-HTTPS=no
-INDEX_ROUTE=/
-API_ROUTE=/api
-USER_ROUTE=/users
-API_VERSION=1.1.0
-CERT_PROVIDER=SELF_SIGNED
-KEY_STORE=/bin/keystore/
-APP_CERT=cert.pem
-APP_KEY=key.pem
+EXP_API_PORT=3000
+EXP_API_MONGO_URI=mongodb://localhost:27017/
+EXP_API_MONGO_DB_NAME=EXPRESS_API
+EXP_API_LOGGING_LEVEL=info
+EXP_API_NODE_ENV_PRODUCTION=yes
+EXP_API_APP_IP=localhost
+EXP_API_HTTPS=no
+EXP_API_INDEX_ROUTE=/
+EXP_API_API_ROUTE=/api
+EXP_API_USER_ROUTE=/users
+EXP_API_API_VERSION=1.1.0
+EXP_API_CERT_PROVIDER=SELF_SIGNED
+EXP_API_KEY_STORE=/bin/keystore/
+EXP_API_APP_CERT=cert.pem
+EXP_API_APP_KEY=key.pem
