--- a/app_config/config.json
+++ b/app_config/config.json
@@ -24,5 +24,22 @@
     "npm" : "/environment/npm/.env",
     "docker" : "/environment/docker/.env",
     "dockerCompose" : "/environment/docker-compose/.env"
-  }
+  },
+  "expectedEnvironmentVariables": [
+    "EXP_API_PORT",
+    "EXP_API_MONGO_URI",
+    "EXP_API_MONGO_DB_NAME",
+    "EXP_API_LOGGING_LEVEL",
+    "EXP_API_NODE_ENV_PRODUCTION",
+    "EXP_API_HTTPS",
+    "EXP_API_APP_IP",
+    "EXP_API_INDEX_ROUTE",
+    "EXP_API_API_ROUTE",
+    "EXP_API_USER_ROUTE",
+    "EXP_API_API_VERSION",
+    "EXP_API_CERT_PROVIDER",
+    "EXP_API_KEY_STORE",
+    "EXP_API_APP_CERT",
+    "EXP_API_APP_KEY"
+  ]
 }
