--- a/kube/express.yaml
+++ b/kube/express.yaml
@@ -30,8 +30,8 @@ spec:
           ports:
             - containerPort: 3000
           env:
-            - name: NODE_ENV_DEPLOYMENT
+            - name: EXP_API_ENV_DEPLOYMENT
               value: "docker-compose"
-            - name: APP_DIR
+            - name: EXP_API_APP_DIR
               value: "/usr/src/app"
           imagePullPolicy: Always
