--- a/kube/express.yaml
+++ b/kube/express.yaml
@@ -1,7 +1,65 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: express
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mongo-pvc
+  namespace: express
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 256Mi
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongo
+  namespace: express
+spec:
+  selector:
+    app: mongo
+  ports:
+    - port: 27017
+      targetPort: 27017
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mongo
+  namespace: express
+spec:
+  selector:
+    matchLabels:
+      app: mongo
+  template:
+    metadata:
+      labels:
+        app: mongo
+    spec:
+      containers:
+        - name: mongo
+          image: mongo
+          ports:
+            - containerPort: 27017
+          volumeMounts:
+            - name: storage
+              mountPath: /data/db
+      volumes:
+        - name: storage
+          persistentVolumeClaim:
+            claimName: mongo-pvc
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: express-api
+  namespace: express
 spec:
   selector:
     app: express-api
@@ -14,8 +72,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: express-api
+  namespace: express
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: express-api
