--- a/kube/mongo.yaml
+++ b/kube/mongo.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
+  namespace: express
 spec:
   accessModes:
     - ReadWriteOnce
@@ -13,6 +14,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongo
+  namespace: express
 spec:
   selector:
     app: mongo
@@ -24,6 +26,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongo
+  namespace: express
 spec:
   selector:
     matchLabels:
