--- a/environment/docker-compose/.env
+++ b/environment/docker-compose/.env
@@ -1,5 +1,6 @@
 EXP_API_PORT=3000
 EXP_API_MONGO_URI=mongodb://mongo:27017/
+EXP_API_AMQP_URI=amqp://mqlight:5672
 EXP_API_MONGO_DB_NAME=EXPRESS_API
 EXP_API_LOGGING_LEVEL=info
 EXP_API_NODE_ENV_PRODUCTION=yes
