--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mocha": ">=7.1.1",
     "mongoose": "^5.9.6",
     "morgan": ">=1.10.0",
-    "npm": ">=6.14.3",
+    "mqlight": "^2.0.2019041500",
+    "npm": "^6.14.4",
     "pug": ">=2.0.4",
     "request": ">=2.88.0",
     "serve-favicon": ">=2.5.0",
