--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "mocha test/testAPI/apiTests.js"
   },
   "dependencies": {
+    "audit": "0.0.6",
     "cookie-parser": ">=1.4.5",
     "debug": ">=2.6.9",
     "dotenv": ">=8.2.0",
