--- a/docker/environment/docker_web.env
+++ b/docker/environment/docker_web.env
@@ -1,3 +1,5 @@
+EXP_API_ENV_DEPLOYMENT=docker
+EXP_API_APP_DIR=/usr/src/app
 EXP_API_PORT=3000
 EXP_API_MONGO_URI=mongodb://mongo:27017/
 EXP_API_AMQP_URI=amqp://mqlight:5672
