Remove version from the list of APIs in appTest.js
Update README.md file

Correct environment variables so that external error logging does not take place.

--- a/docker/environment/docker_web.env
+++ b/docker/environment/docker_web.env
@@ -16,4 +16,4 @@ EXP_API_CERT_PROVIDER=SELF_SIGNED
 EXP_API_KEY_STORE=/bin/keystore/
 EXP_API_APP_CERT=cert.pem
 EXP_API_APP_KEY=key.pem
-EXP_API_APP_EXTERNAL_ERROR=http://pdwraspbx2:3000/api/gpio/component/display/lcd/message
+EXP_API_APP_EXTERNAL_ERROR=false
