--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   web:
     image: boselane6633/express-api-app:latest
     ports:
-    - "3000:3000"
+    - "3000"
     depends_on:
     - mongo
     env_file:
@@ -21,3 +21,11 @@ services:
       - "9180:9180"
     volumes:
     - ${DKR_MQLIGHT_DIR}:/var/mqlight
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - web
+    ports:
+      - "4000:4000"
