--- a/docker/environment/docker_web.env
+++ b/docker/environment/docker_web.env
@@ -8,6 +8,8 @@ EXP_API_LOGGING_LEVEL=info
 EXP_API_NODE_ENV_PRODUCTION=yes
 EXP_API_HTTPS=no
 EXP_API_APP_IP=127.0.0.1
+EXP_API_LB_ADDRESS=127.0.0.1
+EXP_API_LB_PORT=4000
 EXP_API_INDEX_ROUTE=/
 EXP_API_API_ROUTE=/api
 EXP_API_USER_ROUTE=/users
